added rose gold, new creative mod tab, and renamed scythe texture!

--- a/src/main/resources/assets/scythe/lang/en_us.json
+++ b/src/main/resources/assets/scythe/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.scythe.scythe": "scythe"
+  "item.scythe.scythe": "scythe",
+  "item.scythe.rose_gold": "rose gold",
+  "creativetab.scythe_tab": "scythe mod tab"
 }
